--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Button"
+                android:onClick="populateMenu"
                 android:id="@+id/button" android:layout_gravity="center"/>
     </FrameLayout>
 
