--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,12 +21,12 @@
 				    android:layout_width="match_parent"
 				    android:layout_height="wrap_content"
 				    android:id="@+id/spinner" android:layout_gravity="center_horizontal|top"/>
-		    <ScrollView
+		    <ListView
 				    android:layout_width="match_parent"
 				    android:layout_height="match_parent"
 				    android:layout_weight="1"
-				    android:id="@+id/scrollView" android:layout_gravity="center">
-		    </ScrollView>
+				    android:id="@+id/listview" android:layout_gravity="center">
+		    </ListView>
 	    </LinearLayout>
     </FrameLayout>
 
