--- a/app/src/main/res/layout/row_layout_list.xml
+++ b/app/src/main/res/layout/row_layout_list.xml
@@ -9,7 +9,7 @@
 			android:layout_marginRight="15dp"
 			android:layout_gravity="center_vertical"
 			android:id="@+id/leafImage"
-			android:src="@drawable/leadf"/>
+			android:src="@drawable/leaf"/>
 	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
 	          android:textSize="25sp"
 	          android:paddingBottom="10dp"
