--- a/app/src/main/res/layout/spinner_layout.xml
+++ b/app/src/main/res/layout/spinner_layout.xml
@@ -17,6 +17,7 @@
 			/>
 	<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
 	          android:textSize="20sp"
+	          android:paddingLeft="15dp"
 	          android:text="Not Serving"
 	          android:textAlignment="center"
 	          android:textColor="@android:color/darker_gray"
