checks for liking and disliking of menuitems

--- a/app/src/main/res/layout/row_layout_list.xml
+++ b/app/src/main/res/layout/row_layout_list.xml
@@ -7,17 +7,19 @@
 	<ImageView android:layout_width="20dp" android:layout_height="20dp"
 			android:layout_marginLeft="10dp"
 			android:layout_gravity="center_vertical"
+			android:visibility="gone"
 			android:id="@+id/leafImage"
 			android:src="@drawable/leaves"/>
 	<ImageView android:layout_width="20dp" android:layout_height="20dp"
 	           android:layout_marginLeft="10dp"
-	           android:layout_marginRight="15dp"
+	           android:visibility="gone"
 	           android:layout_gravity="center_vertical"
-	           android:id="@+id/favouriteStar"
+	           android:id="@+id/like"
 	           android:src="@drawable/like"/>
 	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
 	          android:textSize="25sp"
-	          android:layout_marginRight="15dp"
+	          android:layout_marginLeft="15dp"
+	          android:layout_marginRight="10dp"
 	          android:paddingBottom="10dp"
 	          android:paddingTop="10dp"
 	          android:id="@+id/listTextView"
