--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
 				    android:id="@+id/spinner" android:layout_gravity="center_horizontal|top"/>
 		    <ListView
 				    android:layout_width="match_parent"
-				    android:layout_height="match_parent"
+				    android:layout_height="0dp"
 				    android:layout_weight="1"
 				    android:id="@+id/listview" android:layout_gravity="center">
 		    </ListView>
