--- a/app/src/main/res/layout/spinner_layout.xml
+++ b/app/src/main/res/layout/spinner_layout.xml
@@ -6,7 +6,7 @@
               android:orientation="vertical">
 
 	<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-	          android:textSize="25dp"
+	          android:textSize="25sp"
 	          android:paddingBottom="10dp"
 	          android:paddingTop="10dp"
 	          android:id="@+id/spinnerMainTextView"
