--- a/app/src/main/res/layout/floating_food_layout.xml
+++ b/app/src/main/res/layout/floating_food_layout.xml
@@ -18,7 +18,7 @@
 			android:orientation="horizontal"
 			android:layout_width="match_parent"
 			android:layout_weight="0"
-			android:layout_height="0dp">
+			android:layout_height="wrap_content">
 		<RadioGroup
 				android:layout_width="wrap_content"
 				android:orientation="horizontal"
